deploy-wp-mysql-nginx.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wp-test
spec:
  replicas: 2
  selector:
    matchLabels:
      app: wp-test
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: wp-test
    spec:
      containers:
      - name: nginx
        image: nginx:latest
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
          - containerPort: 80
