wp-mysql-nginx.yml
apiVersion: v1
kind: Pod
metadata:
  name: web
spec:
  containers:
    - name: nginx
      image: nginx:latest
      ports:
        - containerPort: 80
    - name: mysql
      image: mysql:5.7
    - name: wordpress
      image: wordpress:latest
