deploy-wp.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wp-test
spec:
  replicas: 2
  selector:
    matchLabels:
      app: wp-test
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: wp-test
        role: wordpress
    spec:
      containers:
      - name: wordpress
        image: wordpress:5.8.1-fpm
        resources:
          limits:
            memory: "128Mi"
            cpu: "200m"
---
apiVersion: v1
kind: Service
metadata:
  name: wp-service
  labels:
    app: wp-test
spec:
  selector:
    role: wordpress
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
