ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-test
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  ingressClassName: nginx
  rules:
    - host: kube.test
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: wp-service
                port:
                  number: 80
